--- a/flask-web/templates/index.html
+++ b/flask-web/templates/index.html
@@ -54,8 +54,8 @@
                     <img src="{{ url_for('static', filename='images/saze.jpg') }}" alt="Moje kočka Sazina" class="imgkocka">
                 </a>
                 <a href="{{ url_for('kocky') }}" class="akocka">
-                    <img src="{{ url_for('static', filename='images/tygrik.jpg') }}" alt="Můj kocour Tygřík" class="imgkocka"><br>
-               </a>
+                    <img src="{{ url_for('static', filename='images/tygrik.JPG') }}" alt="Můj kocour Tygřík" class="imgkocka"><br>
+                </a>
                 <a href="{{ url_for('kocky') }}" class="akocka">
                     <img src="{{ url_for('static', filename='images/kote1.jpg') }}" alt="Koťátko číslo jedna" class="imgkocka"><br>
                 </a>
